financial/microtx-saga-lockless-bank-transfer/transfer/transfer-springboot-deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer
  template:
    metadata:
      labels:
        app: transfer
    spec:
      volumes:
        - name: creds
          secret:
            secretName: financialdb-wallet-secret
            defaultMode: 420
      containers:
        - name: transfer-springboot
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          resources: {}
          volumeMounts:
            - name: creds
              mountPath: /oraclefinancial/creds
      restartPolicy: Always
#      imagePullSecrets:
#        - name: regcred
#      schedulerName: default-scheduler
