financial/microtx-saga-lockless-bank-transfer/transfer/transfer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-transfer
  namespace: financial
  annotations:
    external-dns.alpha.kubernetes.io/hostname: oracledev.ai
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443              # External HTTPS port
      targetPort: 443       # Assuming Spring Boot is serving HTTPS on 8443
