financial/microtx-saga-lockless-bank-transfer/transfer/transfer-springboot-service-ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: transfer
spec:
  type: ClusterIP
  selector:
    app: transfer
  ports:
    - protocol: TCP
      port: 8081              # External
      targetPort: 8081
